# void_pointer.h

./: .gitignore  CMakeLists.txt  DEPRECATED.md  Example.Deprecated.cpp  Example.cpp  README.md  xmake.lua
include/: void_pointer.h
include/void_pointer/: IVoidPointer.h  VoidPointer.h  VoidPointerBase.h  VoidPointerDeleter.h  deprecated.h  make_raw_void.h  make_raw_void_ptr.h  make_void.h  make_void_ptr.h  void_pointer.h  void_ptr.h  void_ptr_raw.h
include/void_pointer/deprecated/: VoidPointerDeleter.h
